--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ button.buttonDetail{
   top: -35px;
 }
 
-/* <<<<<<<<<<<<<<<<<<<<<<section 2>>>>>>>>>>>>>>> */
+/* <<<<<<<<<<<<<<<<<<<<<<section 2 Web>>>>>>>>>>>>>>> */
 
 section.section2{
   width: 100%;
@@ -260,12 +260,12 @@ h2.familyNameFemale{
 }
 
 img.couplePicture{
-  width: 200px;
+  width: 210px;
   height: 260px;
   border-radius: 30px;
 }
 
-/* <<<<<<<<<<<<<<<<<<<<<<section 3>>>>>>>>>>>>>>> */
+/* <<<<<<<<<<<<<<<<<<<<<<section 3 Web>>>>>>>>>>>>>>> */
 
 section.section3{
   /* background-color: yellow; */
@@ -273,6 +273,55 @@ section.section3{
   height: 100vh;
 }
 
+div.descripitionWrapper{
+  width: 100%;
+  padding-left: 260px;
+  padding-right: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+div.containerCardAcara{
+  width: 100%;
+  height: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h1.subTitle{
+  font-family: "Precious";
+  font-size: 44px;
+  color: #586032;
+}
+div.cardAcaraWrapper{
+  width: 100%;
+  height: 50%;
+  padding-left: 260px;
+  padding-right: 260px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.iconAcara {
+  width: 30px;
+  height: 30px;
+}
+
+.timeBox{
+  width: 390px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 
 
@@ -430,9 +479,39 @@ section.section3{
     margin-bottom: 10px;
   }
   img.couplePicture {
-    width: 270px;
+    width: 230px;
     height: 260px;
     border-radius: 30px;
   }
 
+  /* <<<<<<<<<<<<<<<<<<<<<<section 3 Mobile>>>>>>>>>>>>>>> */
+
+section.section3{
+  /* background-color: yellow; */
+  width: 100%;
+  height: 100vh;
+}
+div.containerCardAcara{
+  height: 42%;
+}
+div.descripitionWrapper{
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+h1.subTitle{
+  font-family: "Precious";
+  font-size: 34px;
+  color: #586032;
+}
+div.cardAcaraWrapper{
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding-top: 0px;
+}
+.timeBox{
+  width: 200px;
+}
 }
