--- a/src/App.css
+++ b/src/App.css
@@ -341,8 +341,69 @@ section.section4{
   height: 100vh;
   /* background-color: blue; */
   margin-top: 100vh;
+  padding-top: 50px;
+}
+.boxScWrapper{
+  width: 100%;
+  height: 60vh;
+  /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 250px;
+  padding-right: 250px;
+}
+.scrollWrapper{
+  width: 100%;
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  /* background-color: yellow; */
+  border-radius: 10px;
+  padding: 20px 30px 20px;
+}
+.listBox{
+  width: 100%;
+  height: auto;
+  border-bottom: #586032 2px solid;
+  padding-bottom: 8px;
+  display: flex;
+  margin-bottom: 40px;
+}
+.boxNama{
+  width: 25%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.name{
+  font-family: "Poppins-Bold";
+  font-size: 14px;
+  color: #586032;
+}
+.ucapan{
+  font-family: "Poppins-Bold";
+  font-size: 14px;
+  color: #586032;
+}
+.boxUcapan{
+  width: 75%;
+  height: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.iconHeart{
+  width: 20px;
+  height: 20px;
 }
 
+/* <<<<<<<<<<<<<<<<<<<<section 5 Web>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
+
+.section5{
+  width: 100%;
+  height: 100vh;
+}
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<Mobileeee>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
 @media only screen and (max-width: 640px) {
@@ -547,5 +608,20 @@ section.section4{
   height: 100vh;
   margin-top: 40vh;
 }
-
+.boxScWrapper{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.scrollWrapper{
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.boxNama{
+  width: 40%;
+}
+.iconHeart{
+  margin-right: 10px;
+}
 }
